--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ h1 {
     margin: 12px 5px;
 }
 
-h2 {
+a {
     color: black;
     font-size: 250%;
     font-weight: 400;
     margin-left: 5px;
 }
 
-h2:hover {
+a:hover {
     cursor: pointer;
     filter: drop-shadow(0px 0px 4px #ffff);
 }
@@ -101,6 +101,10 @@ input:focus {
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 1000;
     opacity: 0.7;
+}
+
+.spin-img {
+    animation: spin 2s calc(2);
 }
 
 #load img {
@@ -409,7 +413,7 @@ display: block;
         padding-top: 150px;
     }
 
-    h2 {
+    a {
         margin-left: 0;
     }
 
@@ -420,7 +424,7 @@ display: block;
         min-width: 280px;
     }
 
-    h2 {
+    a {
         margin-bottom: 2px;
         margin-top: 10px;
         margin-left: 5px;
