--- a/style.css
+++ b/style.css
@@ -436,17 +436,6 @@ display: block;
     }
 }
 
-@media (max-width: 320px) {
-    .card-big {
-        margin: 15px;
-        height: 500px;
-    }
-
-    .property-details {
-        height: 80px;
-    }
-}
-
 @media (max-width: 440px) {
     .arrow {
         position: absolute;
@@ -468,5 +457,18 @@ display: block;
 
     #close-icon {
         left: 110px;
+    }
+
+    .card-big {
+        margin: 15px;
+        height: 400px;
+    }
+
+    .property-details {
+        height: 30px;
+    }
+
+    .image img {
+        width: 80px;
     }
 }
